--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "lodash": "^4.17.21",
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-transport": "^2.7.4",
+    "otplib": "^12.0.1",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
+    "qrcode": "^1.5.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
